# metagame-balance

./: .gitignore  BalanceMeta.py  Dockerfile  Example_BattleEcosystem.py  Example_RemoteCompetitor.py  FCNN.py  LICENSE  LICENSE.txt  README.md  Utility_Fn_Manager.py  kill-all.sh  pyproject.toml  requirements.txt  run_distributed.sh  run_distributed_giga_wolf.sh
Agent/: GUIBattleAgent.py  GUISelectorAgent.py  HeuristicBattleAgent.py  RandomBattleAgent.py  RandomBuilderAgent.py  RandomSelectorAgent.py
Algorithm/: Discrete_A3C_Trainer.py
Behaviour/: BalancePolicies.py  BattlePolicies.py  DataAggregators.py  SelectorPolicies.py  TeamBuilderPolicies.py  TeamHyphotesizers.py  TeamValuators.py  __init__.py
Docker/: Dockerfile
Engine/: BattleEngine.py  DataObjects.py  DataTypes.py  PkmBaseStructures.py  PkmBattleEngine.py  PkmBattleEnv.py  PkmConstants.py  PkmMatchEngine.py  PkmMoves.py  PkmPoolGenerator.py  PkmStandardMoves.py  PkmTeamGenerator.py  StandardPkmMoves.py
Environment/: PkmBattleEnv.py  SimplePkmEnv.py
Examples/: Test_Loading.py  Test_Match.py  Test_PkmBattleEnv.py  Test_Recording.py  Test_StopExecutionTime.py  Test_TreeChampionship.py
Framework/: DataConstants.py  DataObjects.py  DataTypes.py  StandardPkmMoves.py
Player/: GUIAgent.py  GUIBattleAgent.py  GUISelectionAgent.py  GUISelectorAgent.py  HeuristicAgent.py  HeuristicBattleAgent.py  HeuristicReactiveAgent.py  HumanAgent.py  RandomAgent.py  RandomBattleAgent.py  RandomSelectionAgent.py  RandomSelectorAgent.py
Test/: TestDataObjects.py  TestEncodingMethods.py  TestLegalMethods.py  Test_GUISelectionAgent.py  Test_GUISelectorAgent.py  Test_Match.py  Test_PkmBattleEngine.py  Test_PkmBattleEnv.py  Test_PkmMatchEngine.py  Test_PkmPool.py  Test_Recorder.py  Test_TreeChampionship.py
Util/: Encoding.py  Learning.py  PkmRosterGenerators.py  PkmTeamGenerators.py  Plugin.py  Projection.py  Recorder.py  Recorders.py  Recording.py  __init__.py
agent/: Example_Competitor.py  MC_Agent.py  Proposed_Competitor.py  Seq_Softmax_Competitor.py
competitor/: ExampleCompetitor.py  RemoteCompetitorManager.py  RunExampleCompetitor.py  RunRemoteVGCEcosystem.py
constraint/: __init__.py
example/: Example_BalanceEcosystem.py  Example_BattleEcosystem.py  Example_ChampionshipEcosystem.py  Example_Competitor.py  Example_GUISelectorAgent.py  Example_GameBalanceEcosystem.py  Example_GeneratePkmRoster.py  Example_LeagueEcosystem.py  Example_Match.py  Example_PkmBattleEnv.py  Example_PkmMatchEngine.py  Example_PkmRoster.py  Example_Recording.py  Example_RemoteChampionshipEcosystem.py  Example_RemoteCompetitor.py  Example_RemoteVGCEcosystem.py  Example_TreeChampionship.py  (+1 more)
(+252 files in other folders)
