[tool.poetry]
name = "metagame_balance"
version = "0.1.2"
description = "Fork of the pokemon vgc engine for a niantic-internal research project."
authors = []
license = "All rights reserved"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.23.3"
gym = ">=0.10.9"
PySimpleGUI = ">=4.20.0"
elo = "~=0.1.1"
arcade = "~=2.6.7"
cma = "~=3.2.2"
scipy = "^1.5"
matplotlib = "^3.3.3"
simple-plugin-loader = "^2.0"
torch = "1.10.2"
setuptools = "58"
tqdm = "^4.64.1"
kfp = "^1.8.14"


[tool.poetry.group.dev.dependencies]
flameprof = "^0.4"
snakeviz = "^2.1.1"
py-spy = "^0.3.14"
mypy = "^0.981"
kfp = {extras = ["all"], version = "^1.8.14"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
main = "metagame_balance.main:main"
BalanceMeta = "metagame_balance.BalanceMeta:main"